<resources>
    <string name="app_name">WIL Mobile App</string>
    <string name="get_started">Get Started!</string>
    <string name="todo">TODO</string>
    <string name="from_techminds_institute">From TechMinds Institute</string>
    <string name="from_techminds_institute2">From TechMinds Institute</string>
    <string name="todo2">TODO</string>
    <string name="contact_us">Contact Us.</string>
    <string name="contact_us2">Contact Us</string>
    <string name="homepage">Homepage</string>
    <string name="what_we_do">What we do</string>
    <string name="summary">Empowering the Nation is committed to fostering good change by enabling people to realise their greatest potential as individuals, groups, and communities. Based on the values of creativity, diversity, and honesty, we are dedicated to developing long-term solutions that deal with the most important issues facing our country right now.</string>
    <string name="six_month_courses">Six-Month Courses</string>
    <string name="courses">Courses</string>
    <string name="price">Price</string>
    <string name="sewing">Sewing</string>
    <string name="first_aid">First-Aid</string>
    <string name="landscaping">Landscaping</string>
    <string name="life_skills">Life Skills</string>
    <string name="r1500">R1500</string>
    <string name="avaliable_courses">Avaliable Courses</string>
    <string name="contact_us3">Contact Us</string>
    <string name="summary2">Our goal is to close the disparities in economic development, education, and technology so that all citizens have the means to prosper. We think that by encouraging cooperation, advocating for fair opportunities, and investing in people\'s potential, we can create a more robust and prosperous future for all.</string>
    <string name="hpbutton"><![CDATA[<- Homepage]]></string>
    <string name="reach_out_to_us">Reach Out To Us</string>
    <string name="location"><![CDATA[Empowering the Nation @ 1 Link Road St James Avenue &, Link Rd, Westville, Durban, 3630]]></string>
    <string name="physical_address">Physical Address</string>
    <string name="contact_details">Contact Details</string>
    <string name="comms">Cellphone Number: 082 123 1234 Email Address: empthenation@gmail.com</string>
</resources>