<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F1F1F"
    android:backgroundTint="#2E2B2B"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="440dp"
        android:layout_height="415dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/empowering_the_nation"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/button"
        android:layout_width="178dp"
        android:layout_height="55dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="143dp"
        android:backgroundTint="#50ADE3"
        android:text="@string/get_started"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:cornerRadius="0px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="139dp"
        android:layout_height="38dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="134dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/from_techminds_institute2"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#C8C8C8"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>